src/external-reference-table.cc
@@ -219,12 +219,12 @@ void ExternalReferenceTable::AddReferences(Isolate* isolate) {
   // If the trap handler is not supported, the optimizer will remove these
   // runtime functions. In this case, the arm simulator will break if we add
   // them to the external reference table.
-  if (V8_TRAP_HANDLER_SUPPORTED) {
-    Add(ExternalReference::wasm_set_thread_in_wasm_flag(isolate).address(),
-        "wasm::set_thread_in_wasm_flag");
-    Add(ExternalReference::wasm_clear_thread_in_wasm_flag(isolate).address(),
-        "wasm::clear_thread_in_wasm_flag");
-  }
+#ifdef V8_TARGET_ARCH_X64
+  Add(ExternalReference::wasm_set_thread_in_wasm_flag(isolate).address(),
+      "wasm::set_thread_in_wasm_flag");
+  Add(ExternalReference::wasm_clear_thread_in_wasm_flag(isolate).address(),
+      "wasm::clear_thread_in_wasm_flag");
+#endif
   Add(ExternalReference::f64_acos_wrapper_function(isolate).address(),
       "f64_acos_wrapper");
   Add(ExternalReference::f64_asin_wrapper_function(isolate).address(),
